# AMDstracted-GPU

./: .clang-tidy  .gitignore  .gitmodules  ACCELERANT_REFACTOR_SUMMARY.md  AGNOSIS_IMPLEMENTATION.md  BUILD_AND_INSTALL.md  BUILD_SUMMARY.md  Build.sh  Build.sh.haiku  CHANGELOG.md  DEPLOYMENT_GUIDE.md  FINAL_HAIKU_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FIX_HAIKU_BUILD.sh  GAMING_GUIDE.md  GPU_ACCELERATION_INTEGRATION.md  GPU_ONLY_MODE.md  GRAPHICS_INTEGRATION.md  HAIKU_ACCELERANT_INTEGRATION.md  HAIKU_BUILD_GUIDE.md  HAIKU_DEPLOYMENT.md  HAIKU_USER_ACTION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.2.md  INDEX_GPU_ACCELERATION.md  INDEX_RADEON_LEGACY_SUPPORT.md  LICENSE  MESA_GPU_DRIVERS.md  MESA_LIBDRM_AMDGPU_FIX.md  MESA_MESON_HAIKU_FIX.md  Makefile  Makefile.old  Makefile.unified  Makefile.v2  NEXT_STEPS.md  OS_ABSTRACTION_BEST_PRACTICES.md  PHASE3_COMPLETION.md  (+63 more)
accelerant/: ARCHITECTURE.md  README.md  meson.build
accelerant/include/: accelerant_api.h  accelerant_haiku.h
accelerant/src/: Accelerant.c  AccelerantTest.c  Accelerant_v2.c  HailuAMDInterface.c
build_unified/: test_unified_driver
config/: .gitignore  build.mk  config.h
core/gpu/: objgpu.c
core/hal/: hal.c  hal.h
core/hal/hal/: hal.c
core/ipc/: ipc_lib.c
core/ipc/ipc/: README.md  ipc_protocol.h
core/opengl/: opengl_interface.h  opengl_legacy.c
core/resource/: resserv.c
core/rmapi/: rmapi.c  rmapi.h  rmapi_server.c
docker/: Dockerfile.haiku  Dockerfile.linux  docker-compose.yml
docs/: ABSTRACTION_MESH.md  ACCELERANT_IMPLEMENTATION_COMPLETE.md  AGNOSIS_COMPLETION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_STEP_BY_STEP.md  ARREGLO_COMPLETO.md  BACKEND_DETECTION.md  BUILD_FIXES.md  BUILD_FIX_SUMMARY.md  CAMBIOS_DETALLADOS.md  CHANGELOG.md  COMPILATION_FIX_SUMMARY.md  DEBUG.md  FASE_2_COMPLETION.md  FINAL_DEPLOYMENT_READY.md  FINAL_STATUS.md  FIX_SUMMARY.md  GPU_ACCELERATION_FINAL_STATUS.md  HAIKU_BUILD_FIX.md  HAIKU_BUILD_TROUBLESHOOTING.md  HAIKU_COMPARISON.md  HAIKU_INTEGRATION.md  HAIKU_MESA_BUILD_FIX.md  HAIKU_NVIDIA_RECYCLING_SUMMARY.md  HAIKU_PRIMITIVES_GUIDE.md  HAIKU_STABILITY_ACHIEVED.md  HAIKU_SUPPORT_FINAL_STATUS.md  HAIKU_TESTING_GUIDE.md  HEADER_ANALYSIS.md  IMPLEMENTATION_STATUS.md  IMPORTANT_SCRIPT_POLICY.md  LEGACY_GPU_ABSTRACTION_ARCHITECTURE.md  LEGACY_SUPPORT.md  MAESTRO.md  OPTIMIZATION_ROADMAP.md  OS_CONFIGURATION_STRATEGY.md  PASO_6A_SIMULACION_ARQUITECTURAL.md  PHASE1_TESTING_RESULTS.md  PHASE2_GPU_INTEGRATION.md  (+13 more)
docs/archived/: CODE_ANALYSIS.md  COMPREHENSIVE_STATUS.md  PHASE_2_1_COMPLETION.md  PHASE_2_2_COMPLETION.md  PHASE_2_3_COMPLETION.md  PHASE_3_2_3_INTEGRATION.md  PROJECT_STATE.md  ROADMAP_IMPLEMENTATION.md
drivers/: driver_loader.c  haiku_translator_compat.h
drivers/amdgpu/: amdgpu_gem_userland.c  amdgpu_kms_userland.h  amdgpu_pci_ids.h  driver_amd.c  radeon_legacy_support.h
drivers/drm_shim/: IMPLEMENTATION_PLAN.md  README.md  device_manager.c  device_manager.h  drm_radeon_shim.c  drm_shim.c  drm_to_rmapi.c  drm_to_rmapi.h
drivers/gallium/: README_RMAPI_DRIVER.md  rmapi_context.c  rmapi_context.h  rmapi_resource.c  rmapi_screen.c  rmapi_screen.h  rmapi_winsys.c
drivers/gallium/target_rmapi/: Makefile.am  meson.build  rmapi_drm.c  rmapi_target.c
drivers/interface/: driver_interface.h  drm_access.c  drm_access.h  ip_block_interface.h  mmio_access.c  mmio_access.h  ring_mgmt.c  ring_mgmt.h
drm/: README.md  drm_shim.c  drm_shim_v2.c
drm-shim/: amdgpu_drm.h  drm_shim.c
examples/: example_main.c  fake_glxgears.c  opengl_client_example.c  os_program.c  radeon_legacy_example.c  real_compute.c  rmapi_client_demo.c  vkinfo_amd.c
examples/opengl_app/: simple_triangle  simple_triangle_real.c
freebsd-radeon-driver/: README_REFERENCE.md  atom.h  atombios.h  download_radeon.sh  r600_blit.c  r600_reg.h  radeon-driver-index.html  radeon_cp.c  radeon_drv.h  radeon_gem.c  radeon_irq.c  radeon_object.c  radeon_state.c  rv770_dpm.c
haiku-amd/: README.md
haiku-amd/accelerant/: AmdAccelerant.cpp  ZinkAmd.cpp
haiku-amd/addon/: AmdAddon.cpp
kernel-amd/linux/: ioctl_amd.c
kernel-amd/os-interface/: os_abstract_threading.h  os_interface.h
kernel-amd/os-primitives/: os_primitives.h
os/: os_interface.h
os/common/: os_abstract_ipc.c  os_abstract_ipc.h  os_pci_stub.c
os/freebsd/: os_primitives_freebsd.c
os/haiku/: haiku_window_stub.c  os_interface_haiku.c  os_primitives_haiku.c
os/interface/: os_primitives.h
os/linux/: os_interface_linux.c  os_primitives_linux.c
scripts/: README.md  build_agnosis.sh  build_for_haiku.sh  build_gpu_acceleration.sh  build_mesa_r600.sh  build_zink.sh  deploy_gpu_final.sh  deploy_haiku.sh  detect_gpu.sh  haiku_build.sh  haiku_gpu_setup.sh  install.sh  install_fuchsia.sh  install_gpu_required.sh  install_haiku.sh  install_linux.sh  install_redox.sh  launch_amdgpu.sh  recycle_from_nvidia.sh  setup_mesa.sh  test_gpu_haiku.sh  test_opengl_acceleration.sh  verify_installation.sh  verify_mesa_config.sh
src/amd/: amd_backend_detection.c  amd_backend_detection.h  amd_device.h  amd_device_core.c  amd_devices.c  amdgpu_gem_userland.c  amdgpu_gem_userland.h  amdgpu_kms_userland.c  amdgpu_pci_ids.h  gfx_v10.c  hal.c  hal.h  objgpu.c  radeon_legacy_support.c  radv_backend.c  radv_backend.h  radv_backend_v2.c  resserv.c  rmapi.c  rmapi.h  rmapi_server.c  shader_compiler.c  shader_compiler_v2.c  vcn_v2.c  zink_layer.c  zink_layer.h
src/amd/hal/: hal.c  (+1 more)
src/common/: ipc_lib.c  ipc_lib.h  ipc_protocol.h
src/os/: os_interface.h  os_primitives.h
src/tests/: Makefile.test  README.md  test_framework.h  test_gmc_v10.c  test_suite
tests/: Makefile.test  test_components  test_components.c  test_framework.h  test_gmc_v10.c  test_runner.c  test_suite  test_unified_driver.c
tests/framework/: test_framework.c  test_framework.h
tests/mocks/: test_mocks.c
tests/unit/: test_shader_performance  test_shader_performance.c
tools/: build.sh  enable_opengl_haiku.sh  enable_vulkan.sh  env_radv.sh  test_haiku.sh
(+71 files in other folders)
