option('userland_mode', type: 'integer', min: 0, max: 1, value: 0, description: 'Enable userland mode (0=kernel-like, 1=userland)')
option('enable_tests', type: 'boolean', value: true, description: 'Build and run tests')
option('enable_examples', type: 'boolean', value: true, description: 'Build example programs')
option('vulkan_backend', type: 'combo', choices: ['radv', 'zink', 'none'], value: 'radv', description: 'Vulkan backend to use')